--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -38,20 +38,23 @@
         <div class="frame">
             {% if result != None %}
             <div class="results">
-                <table class="courses">
+                <table id='mytable' class="courses">
                     <tr>
                         {% for col in columns %}
                         <th>{{ col }}</th>
                         {% endfor %}
+                        <th>Savings</th>
                     </tr>
                     {% for entry in result %}
                     <tr>
                         {% for col in entry %}
                         <td>{{ col }}</td>
                         {% endfor %}
+                        <td><img src=https://resizing.flixster.com/UlYoMfBUoJW05MGy4N2NniHJ6GM=/130x0/v1.bTsxMTIxNTYwNjtqOzE4MDM5OzEyMDA7MTUzNjsyMDQ4></td>
                     </tr>
                     {% endfor %}
                 </table>
+
             </div>
             <p class="num_results">Results: {{ num_results }}</p>
             {% endif %}
