--- a/mysite/homepage/static/homepage/main.css
+++ b/mysite/homepage/static/homepage/main.css
@@ -1,5 +1,6 @@
 
 html, body {
+    font-size: 18;
     margin: 0;
     padding: 0;
     font-family:'Open Sans', Helvetica, sans-serif;
@@ -7,8 +8,7 @@ html, body {
 
 
 div#header {
-    background: white url("images/background.jpg") no-repeat;
-    background-size: 600px 350px;
+    background: rgb(0, 0, 0);
     margin: 0;
     padding: 0;
     min-height: 600px;
@@ -16,10 +16,12 @@ div#header {
 }
 
 div#header h1 {
-    font-size: 20px;
-    color: #f5f5f5;
+    font-size: 85px;
+    color: #FFFFFF;
     margin: 0;
     padding: 200px;
+    justify-content: center;
+    align-items: center;
 
 }
 
