--- a/mysite/model/static/model/main.css
+++ b/mysite/model/static/model/main.css
@@ -80,39 +80,23 @@ table.form input {
     margin-right: 5px;
 }
 
-/*table.form input#id_query {
-    font-size: 18px;
-}
-
-table.form ul#id_days {
-    margin: 0px;
-    padding: 0px;
-}
-
-table.form ul#id_days li {
-    display: block;
-    float: left;
-    margin: 0px;
-    padding: 0px;
-}*/
-
-table.courses {
+table.movies {
     border: 1px solid #ddd;
     padding: 0px;
     margin: 0px;
 }
 
-table.courses tr th {
+table.movies tr th {
     text-align: left;
 }
 
-table.courses tr td,
-table.courses tr th {
+table.movies tr td,
+table.movies tr th {
     padding: 3px;
     font-size: 12px;
 }
 
-table.courses tr:nth-child(even) {
+table.movies tr:nth-child(even) {
     background: #eee;
 }
 
