--- a/mysite/polls/static/polls/main.css
+++ b/mysite/polls/static/polls/main.css
@@ -43,6 +43,28 @@ div.error {
     border-bottom: 1px solid #ddd;
 }
 
+
+table.movies {
+    border: 1px solid #ddd;
+    padding: 0px;
+    margin: 0px;
+}
+
+table.movies tr th {
+    text-align: left;
+}
+
+table.movies tr td,
+table.movies tr th {
+    padding: 3px;
+    font-size: 12px;
+}
+
+table.movies tr:nth-child(even) {
+    background: #eee;
+}
+
+
 fieldset {
     padding: 3px;
     margin: 1px;
@@ -80,41 +102,7 @@ table.form input {
     margin-right: 5px;
 }
 
-/*table.form input#id_query {
-    font-size: 18px;
-}
 
-table.form ul#id_days {
-    margin: 0px;
-    padding: 0px;
-}
-
-table.form ul#id_days li {
-    display: block;
-    float: left;
-    margin: 0px;
-    padding: 0px;
-}*/
-
-table.courses {
-    border: 1px solid #ddd;
-    padding: 0px;
-    margin: 0px;
-}
-
-table.courses tr th {
-    text-align: left;
-}
-
-table.courses tr td,
-table.courses tr th {
-    padding: 3px;
-    font-size: 12px;
-}
-
-table.courses tr:nth-child(even) {
-    background: #eee;
-}
 
 ul.errorlist {
     margin: 0px;
