--- a/mysite/homepage/templates/homepage/index.html
+++ b/mysite/homepage/templates/homepage/index.html
@@ -13,6 +13,7 @@
         <ul>
 
 
-<a href="{{ 'movie_recommendation' }}">Movie Recommendation</a>
-<a href="{{ 'model' }}">Modeling Like a Hollywood Executive</a>
-
+<ul>
+  <li><a href="{{ 'movie_recommendation' }}">Movie Recommendation</a></li>
+  <li><a href="{{ 'model' }}">Modeling Like a Hollywood Executive</a></li>
+</ul>
