Fixed some stuff from the move around

--- a/mysite/model/templates/model/index.html
+++ b/mysite/model/templates/model/index.html
@@ -47,7 +47,7 @@
           <div class="jumbotron bg-dark text-white mb-0 radius-0 ht-tm-jumbotron">
             <div class="container">
               <div class="ht-tm-header">
-                <h1 class="display-1 text-chicle text-light text-center">Be a Hollywood Exec!&trade;</h1>
+                <h1 class="display-1 text-chicle text-light text-center pb-5">Be a Hollywood Exec!&trade;</h1>
               </div>
             </div>
             <div class="row">
