Cleaned and fixed final issues

--- a/mysite/model/templates/model/index.html
+++ b/mysite/model/templates/model/index.html
@@ -70,7 +70,7 @@
 
                     <div class="frame text-center pt-4 text-white">
                         {% if result != None %}
-                            <h4 class="result">The result: {{ result }}</h4>
+                            <h4 class="result">{{ result }}</h4>
                         {% endif %}
                     </div>
                 </div>
