--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -49,7 +49,7 @@
                     <tr>
                         {% for col in entry %}
                             {% if 'https' in col %}
-                                <td><img src = {{ col }}></td>
+                                <td><img src = {{ col }} width = '130'></td>
                             {% else %} 
                                 <td>{{ col }}</td>
                             {% endif %}
